# capra-planner

./: .env  .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
migrations/2020-06-27-100802_init/: down.sql  up.sql
planner/: package-lock.json  package.json  vue.config.js
planner/public/: index.html
planner/src/: App.vue  main.ts
planner/src/common/: axios_error.ts  display.ts  dive_segment.ts  gas.ts  routes.ts  time.ts  toast.ts  validation.ts
planner/src/common/serde/: algorithm.ts  dive.ts  dive_segment.ts  dive_type.ts  gas.ts  plan_type.ts  segment_type.ts  settings.ts  tissue.ts  user.ts
planner/src/components/: AboutModal.vue  HelloWorld.vue  Navbar.vue  NoDecoLimit.vue  SettingsModal.vue
planner/src/components/history/: HistoryMain.vue
planner/src/components/login/: LoginNewModal.vue
planner/src/components/plan/: BSEditModal.vue  BSModal.vue  BSNewModal.vue  BSReorderModal.vue  BottomSegments.vue  DecoGases.vue  Parameters.vue
planner/src/components/plan/bottom_segments/: BSEditModal.vue  BSNewModal.vue  BSReorderModal.vue  BottomSegments.vue
planner/src/components/plan/deco_gases/: DecoGasEditModal.vue  DecoGasNewModal.vue  DecoGases.vue
planner/src/components/plan/results/: ExecuteDiveModal.vue  GasTable.vue  PlanTable.vue  Results.vue  SurfaceIntervalModal.vue
planner/src/router/: index.ts
planner/src/serde/: ndl.ts
planner/src/store/: index.ts  plan.ts  userinfo.ts
planner/src/views/: History.vue  Login.vue  Plan.vue  Test.vue
src/: main.rs  ndl.rs  splash.rs
src/db/: actions.rs  connection_options.rs  dives.rs  mod.rs  models.rs  schema.rs  settings.rs  users.rs
src/db/actions/: dive.rs  mod.rs  settings.rs  tissue.rs  user.rs
src/db/models/: dive.rs  gas.rs  mod.rs  segments.rs  settings.rs  tissue.rs  user.rs
src/json_repr/: dive.rs  dive_segment.rs  gas.rs  mod.rs
src/result/: mod.rs
src/routes/: dive.rs  get_plan.rs  get_zhl_plan.rs  history.rs  mod.rs  ndl.rs  settings.rs  user.rs
src/simplified/: mod.rs
