[package]
name = "capra-planner"
version = "0.1.2"
authors = ["Anson <git@anson-cheung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-cors = "^0.2.0"
serde = { version = "^1.0.114" }
time = { version = "^0.2.16", features = ["serde"] }
thiserror = "^1.0.20"
dotenv = "^0.15.0"
capra = { version = "^0.2.0", features = ["use-serde"] }
capra-core = { version = "^0.3.0", features = ["use-serde"] }
sled = "^0.34.6"

[profile.release]
lto = 'fat'